Don't filter GestureFlingStart in |GestureEventQueue|

Scroll events from the touchpad may arrive in the |GestureEventQueue|
out of order, such that a GestureFlingStart arrives before a
GestureScrollUpdate.  Currently, the debounce filter removes the
GestureFlingStart.

This CL will forward the GestureFlingStart and filter a
GestureScrollUpdate which arrives during a fling.

BUG=717205

Change-Id: I42bd147195b9a2be8e34391c534c625cc785e2e0